v0.3.8
Fixing Ext's EditableItem render problem.

v0.3.7
Netzke-core version sync.
Rails 2.3.2 compatibility.

v0.3.6
Netzke-core v0.2.9 compatibility.
Cleaner handling of custom renderers in GridPanel.
New FormPanel-based PropertyEditor replaces PropertyGrid.
Xcheckbox and check-column introduced.
TODO file added.
Bug fix: in TableEditor, the grid now responses on events also after being reconfigured.
Bug fix: a couple of IE-related bugs.
Significant code clean-up.

v0.3.5
Netzke-core v0.2.8 compatibility.

v0.3.4
Quick tips added to the "tools".
Regression: the "General" configuration panel for GridPanel works again.
GridPanel: rows_per_page configuration is now read from General config panel.

v0.3.3.1
Obviously using "new" as a property name in JavaScript isn't liked by Safari. Fixed.

v0.3.3
Bug fix: application not loading the widget specified in the URL (Ext.History-related).
Some code refactoring and readability improvements.
Ext.componentCache renamed into Ext.netzke.cache.
New widget: TableEditor (a compound widget containing a grid and a form for editing table data).
BorderLayoutPanel: a function getRegionWidget(region) added to access a widget in the specified region.
Bug fix: BasicApp: FeedbackGhost now gets instantiated before BasicApp.
Clearer handling of requests to non-existing aggregatees.
Bug fix: now Ext 2.2.1 compatible.
Column operations are now handled properly when :persistent_layout is set to false.
Grid/Form fields configuration is extended with "ext_config" field which stores (in JSON-format) all the extra configuration, which gives extra flexibility to individual column/field configuration.
:persistent_layout set to false now makes a widget ignore what's in the DB.
Bug fix: AccordionPanel doesn't crash when no active item is specified.
Bug fix: redundant flash messages for GridPanel.
FeedbackGhost won't be showing anything if given an empty array.
Cleaner handling of validations in GridPanel.
FormPanel ready for the demo.

v0.3.2