@@ -115,6 +115,7 @@ module Netzke
     end
   
     def resize_region(params)
+      logger.debug "!!! params: #{params.inspect}"
       persistent_config["#{params["region_name"]}_width"] = params["new_width"].to_i if params["new_width"]
       persistent_config["#{params["region_name"]}_height"] = params["new_height"].to_i if params["new_height"]
       {}
